<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_main">

    <include layout="@layout/fragment_maps" />

    <include layout="@layout/sheet_details" />

    <include layout="@layout/sheet_add" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>