...
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:singleSelection="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/addChipGroup">

        <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bus"
                app:chipIcon="@drawable/ic_bus_grey"
...
    </com.google.android.material.chip.ChipGroup>

    <Button
            android:text="@string/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/submitReportButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/addChipGroup"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
...
